samples/_failures_safe/1761695283_56413a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7384482e.c: In function ‘main’:
./samples/SAFE/__tmp_7384482e.c:153:33: error: expected ‘;’ at end of input
  153 |                     print_matrix
      |                                 ^
      |                                 ;
./samples/SAFE/__tmp_7384482e.c:153:21: error: expected declaration or statement at end of input
  153 |                     print_matrix
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_7384482e.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7384482e.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7384482e.c:153:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7384482e.c:153:21: error: expected declaration or statement at end of input
